--- a/.github/workflows/docker_image_deploy.yml
+++ b/.github/workflows/docker_image_deploy.yml
@@ -13,28 +13,24 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       -
-        name: test echo
-        run: |
-          echo ${GITHUB_REF##*/}
-      # -
-      #   name: Checkout
-      #   uses: actions/checkout@v2
-      # -
-      #   name: Set up Docker Buildx
-      #   uses: docker/setup-buildx-action@v1
-      # -
-      #   name: Login to DockerHub
-      #   uses: docker/login-action@v1
-      #   with:
-      #     username: ${{ secrets.DOCKERHUB_USERNAME }}
-      #     password: ${{ secrets.DOCKERHUB_TOKEN }}
-      # -
-      #   name: Build and push
-      #   uses: docker/build-push-action@v2
-      #   with:
-      #     context: .
-      #     file: Dockerfile
-      #     platforms: linux/amd64
-      #     push: true
-      #     tags: |
-      #       ${{ env.DOCKER_IMAGE_PATH }}:${{ env.DOCKER_IMAGE_TAG }}
+        name: Checkout
+        uses: actions/checkout@v2
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      -
+        name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
+        name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: Dockerfile
+          platforms: linux/amd64
+          push: true
+          tags: |
+            ${{ env.DOCKER_IMAGE_PATH }}:${{ env.DOCKER_IMAGE_TAG }}
