--- a/.github/workflows/docker_image_deploy.yml
+++ b/.github/workflows/docker_image_deploy.yml
@@ -5,7 +5,6 @@ on:
     branches: ['release/2.35.0']
 
 env:
-  DOCKER_IMAGE_TAG: ${GITHUB_REF##*/}
   DOCKER_IMAGE_PATH: ${{ secrets.DOCKERHUB_USERNAME }}/i2pd-docker
 
 jobs:
@@ -33,4 +32,4 @@ jobs:
           platforms: linux/amd64
           push: true
           tags: |
-            ${{ env.DOCKER_IMAGE_PATH }}:${{ env.DOCKER_IMAGE_TAG }}
+            ${{ env.DOCKER_IMAGE_PATH }}:${GITHUB_REF##*/}
