--- a/.github/workflows/docker_image_deploy.yml
+++ b/.github/workflows/docker_image_deploy.yml
@@ -2,7 +2,7 @@ name: docker image deploy
 
 on:
   push:
-    branches: ['release/2.35.0']
+    branches: ['release/*']
 
 env:
   DOCKER_IMAGE_PATH: ${{ secrets.DOCKERHUB_USERNAME }}/i2pd-docker
