--- a/nginx_default.conf
+++ b/nginx_default.conf
@@ -3,7 +3,6 @@ server {
     listen       7071 default_server;
 
     location / {
-        proxy_pass http://localhost:7070/;
-        proxy_set_header Host localhost;
+        proxy_pass http://127.0.0.1:7070;
     }
 }
